# Attendace_Management_System

./: README.md  classdiagram.mmd  guide.txt  main.py  package-lock.json  pyproject.toml  requirements.txt  structure.md  test_run_guide.txt
app/core/: attendaceStatus.py
app/models/: attendance.py  school_class.py  session.py
app/services/: attendance_manager.py  file_manager.py  report_service.py
app/ui/: menu.py
data/: attendance.txt  classes.txt  schedules.txt  sessions.txt  students.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: header.tsx
frontend/src/pages/attendance/: attendance.tsx  filter_box.tsx  table.tsx
frontend/src/pages/classroom/: classroom.tsx
frontend/src/pages/schedule/: schedule.tsx
frontend/src/style/: index.css
frontend/src/style/elements/: bentoCard.css  ribbon.css
frontend/src/style/main/: header.css  section.css
frontend/src/utils/: supabaseClient.ts
src/management/: attendance_list.py  class_list.py  student_list.py
src/models/: attendance_record.py  class.py  class_record.py  linked_list.py  schedule.py  student.py
src/services/: attendance_manager.py  data_manager.py  data_migration.py
tests/: test_attendance_manager.py  test_attendance_record.py  test_attendance_status.py  test_file_manager.py  test_linked_list.py  test_linked_list_edge_cases.py  test_menu.py  test_models.py  test_persistence.py  test_report_service.py  test_schedule.py  test_school_class.py  test_services.py  test_session.py  test_student.py
